# restricted

./: pyproject.toml  test.py
src/restricted/: __init__.py  core.py  helpers.py  utils.py
src/restricted/.sandbox/: script.py
