[project]
name = "restricted"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bimal Paudel" }
]
keywords = ["python", "execution", "restricted", "interpreter", "ast", "exec", "uv"]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
